Prevent horizontal scrollbar from appear
It was when a foonote opened in the small layout and the screen (the
viewport) is small enough.

It looks like this is the side effect of using negative `left`
attribute: the scrollbar appears exactly when a element wouldn't fit the
viewport with `left` set to 0. To more on that: new empty space on the
right side of viewport exactly corresponds the right side of the element
with `left` set to 0.

--- a/themes/whatif/static/css/content.css
+++ b/themes/whatif/static/css/content.css
@@ -687,6 +687,7 @@ figure.active figcaption, span.figure.active span.figcaption {
 		padding: 1em 10px;
 		width: 100%;
 		left: -10px;
+		margin-right: -10px;
 		border: 1px solid #7ab130;
 		margin-top: 5px;
 		background-color: #f0f8e6;
